# ESP32-AR-Navigation-Glasses

./: README.md  platformio.ini
src/: CMakeLists.txt  Navigation.ino  filelist.txt  ui.c  ui.h
src/components/: lv_fs_littlefs.h
src/images/: ui_img_arrival_png.c  ui_img_battery_indicator_100_png.c  ui_img_battery_indicator_20_png.c  ui_img_battery_indicator_40_png.c  ui_img_battery_indicator_60_png.c  ui_img_battery_indicator_80_png.c  ui_img_bluetooth.c  ui_img_continue_left_png.c  ui_img_continue_right_png.c  ui_img_left_end_png.c  ui_img_left_uturn_png.c  ui_img_navitation_arrow_destination_png.c  ui_img_off_ramp_slight_left_png.c  ui_img_off_ramp_slight_right_png.c  ui_img_right_end_png.c  ui_img_right_uturn_png.c  ui_img_round_left_270_png.c  ui_img_round_right_90_png.c  ui_img_round_straight_180_png.c  ui_img_slight_left_png.c  ui_img_slight_right_png.c  ui_img_start_png.c  ui_img_straight_png.c  ui_img_wifi_png.c
src/screens/: ui_Screen1.c  ui_Screen2.c  ui_connectionScreen.c
src/utils/: lv_fs_littlefs.cpp
